# urban-energy

./: .gitignore  CHEAT_SHEET.md  CLAUDE.md  LICENSE  PAPER.md  README.md  REPRODUCTION.md  RESEARCH_FRAMEWORK.md  ROADMAP.md  TODO.md  WORKING_LOG.md  notes.txt  pyproject.toml
.claude/: CLAUDE.md
data/: README.md  aggregate_energy_oa.py  aggregate_epc_floor_area_oa.py  aggregate_epc_oa.py  build_postcode_oa_lookup.py  build_projections.py  download_census.py  download_census_2011.py  download_energy_postcode.py  download_energy_stats.py  download_fsa.py  download_imd.py  download_naptan.py  download_nts_mileage.py  download_ons_ruc.py  download_scaling.py  download_vehicles.py  download_workplace.py  extract_gm_roads.py  prepare_gias.py  prepare_nhs.py  process_boundaries.py  process_climate.py  process_epc.py  process_lidar.py
docs/: about.html  summary.json  working_log_v0.md
notes/: methodology_notes_v0.md  roadmap_v0.md  working_log_v0.md
paper/: README.md  argument.md  case_v1.md  case_v2.md  data.md  literature_review.md  method_notes.md  methodology_notes.md  methodology_review.md  overview.md  references.bib  results_snapshot.txt  robustness_plan.md  summary.md
processing/: README.md  common.py  pipeline_lsoa.py  pipeline_oa.py  process_morphology.py  test_pipeline.py
stats/: 00_data_quality.py  01_exploratory_analysis.py  01_regression_analysis.py  02_mediation_analysis.py  02_multilevel_regression.py  03_transport_analysis.py  04_generate_figures.py  05_lockin_analysis.py  06_generate_report.py  07_replication_analysis.py  README.md  build_case.py  (+31 more)
(+46 files in other folders)
