[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-energy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Gareth Simons" }]
dependencies = [
    "geopandas>=1.1.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=19.0.0",
    "rasterio>=1.4.4",
    "requests>=2.32.0",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.0",
    "rasterstats>=0.20.0",
    "aiohttp>=3.13.3",
    "aiofiles>=25.1.0",
    "momepy>=0.9.1",
    "cityseer>=4.23.0b1",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
    "shap>=0.49.1",
    "seaborn>=0.13.2",
    "esda>=2.7.0",
    "libpysal>=4.13.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.6",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["ruff>=0.14.14", "setuptools>=80.10.2", "ty>=0.0.14"]
